[project]
name = "stroke-alert-clinical-deploy"
version = "0.1.0"
description = ""
authors = [
    {name = "Konstantin Burkin",email = "konstantin.burkin.m@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars (>=1.27.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "shap (>=0.47.2,<0.48.0)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
